<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dep7"
    android:layout_gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="50dp"
            android:text="@string/log"
            android:textSize="40dp"
            android:textColor="@color/red"
            android:gravity="center"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/user"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_supervised_user_circle_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/logUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:drawableRight="@drawable/ic_baseline_border_color_24"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/pass"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/logPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:password="true"
                android:textSize="20dp"
                android:drawableRight="@drawable/ic_baseline_visibility_24"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="italic"></TextView>
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/radQLy"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:text="@string/QL"
                android:textColor="@color/blu"
                android:textSize="20dp"
                android:textStyle="bold"></RadioButton>

            <RadioButton
                android:id="@+id/radNVien"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/NV"
                android:textColor="@color/blu"
                android:textSize="20dp"
                android:textStyle="bold"></RadioButton>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/log"
            android:textSize="25dp"
            android:textStyle="italic|bold"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSignUpNow"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:text="@string/signup"
                android:textStyle="italic|bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20dp"></TextView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>