<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dep11"
    tools:context=".UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/up_buss"
            android:textSize="35dp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/buss_name"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_contacts_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/UpdateBussName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/user"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_supervised_user_circle_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/UpdateUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/pass"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/UpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/buss_address"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_add_location_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>
            <EditText
                android:id="@+id/UpdateBussAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_contact_mail_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/UpdateEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/tax"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_money_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/UpdateTax"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/phone"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_baseline_contact_phone_24"
                android:drawablePadding="10dp"
                android:textSize="25dp"></TextView>

            <EditText
                android:id="@+id/UpdatePhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:background="@color/white">
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textSize="25dp"
            android:textStyle="italic|bold"></Button>

        <ListView
            android:id="@+id/listUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp">
        </ListView>
    </LinearLayout>

</ScrollView>